[package]
name = "cloak"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
ipnetwork = "0.21.1"
reqwest = { version = "0.12.23", features = ["json", "gzip"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }

# Optional: If you want to define a binary explicitly
[[bin]]
name = "cloak"
path = "src/main.rs"
